<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.taskreminder.taskadd.TaskAddViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".taskadd.TaskAddFragment">

    <TextView
        android:id="@+id/newTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskTitle"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_textview_top"/>


    <TextView
        android:id="@+id/prioritySpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_textview_top"
        android:labelFor="@+id/prioritySpinner"
        android:text="@string/priority_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:hint="@string/priority_hint"
        app:layout_constraintBottom_toBottomOf="@+id/prioritySpinnerLabel"
        app:layout_constraintStart_toEndOf="@+id/prioritySpinnerLabel" />

    <EditText
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_picker_hint"
        android:onClick="@{()->viewModel.onDatePickerClicked()}"
        android:text="@{viewModel.dateText}"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        app:layout_constraintTop_toBottomOf="@+id/prioritySpinner"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_textview_top"/>

    <EditText
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_picker_hint"
        android:onClick="@{()->viewModel.onTimePickerClicked()}"
        android:text="@{viewModel.timeText}"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_textview_top"/>

    <Switch
        android:id="@+id/alarmSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/alarm_switch_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        android:layout_marginStart="@dimen/margin_start_end"
        android:layout_marginEnd="@dimen/margin_start_end"
        android:layout_marginTop="@dimen/margin_textview_top"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_button_label"
        android:onClick="@{()->viewModel.onAddTaskClick()}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmSwitch"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>