<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.taskreminder.taskedit.TaskEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".taskadd.TaskEditFragment">

        <TextView
            android:id="@+id/editTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_title"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"/>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTaskTitle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleEditText"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="@dimen/margin_textview_top"/>


        <TextView
            android:id="@+id/prioritySpinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_textview_top"
            android:labelFor="@+id/prioritySpinner"
            android:text="@string/priority_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:hint="@string/priority_hint"
            app:layout_constraintBottom_toBottomOf="@+id/prioritySpinnerLabel"
            app:layout_constraintStart_toEndOf="@+id/prioritySpinnerLabel" />

        <EditText
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_picker_hint"
            android:onClick="@{()->viewModel.onDatePickerClicked()}"
            android:text="@{viewModel.dateText}"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            app:layout_constraintTop_toBottomOf="@+id/prioritySpinner"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="@dimen/margin_textview_top"/>

        <EditText
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_picker_hint"
            android:onClick="@{()->viewModel.onTimePickerClicked()}"
            android:text="@{viewModel.timeText}"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="@dimen/margin_textview_top"/>

        <Switch
            android:id="@+id/alarmSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/alarm_switch_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePicker"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_marginTop="@dimen/margin_textview_top"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/updateTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_task_button_label"
            android:onClick="@{()->viewModel.onUpdateTaskClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarmSwitch"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"/>

        <TextView
            android:id="@+id/cancelTextViewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/cancel_button_label"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="@+id/updateTaskButton"
            app:layout_constraintEnd_toStartOf="@+id/updateTaskButton"
            app:layout_constraintTop_toTopOf="@+id/updateTaskButton" />

        <Button
            android:id="@+id/deleteTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.onDeleteTaskClick()}"
            android:text="@string/delete_task_button_label"
            android:backgroundTint="@color/red"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            app:layout_constraintBottom_toBottomOf="@+id/editTaskTitle"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>